<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E5EDF3"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!-- Greeting Text -->
    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeTextView"
        android:textColor="#004B8D"
        android:textSize="24sp"
        android:layout_marginBottom="24dp" />

    <!-- Card for Information Button 1 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        >

        <Button
            android:id="@+id/button_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:drawableStart="@drawable/ic_info"
            android:drawablePadding="20dp"
            android:fontFamily="@font/lalezar_regular"
            android:padding="10dp"
            android:text="@string/button_one"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <!-- Card for Information Button 2 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/button_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_two"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_process"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/lalezar_regular"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <!-- Card for Information Button 3 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/button_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_three"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_legal_parents"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:fontFamily="@font/lalezar_regular"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <!-- Card for Information Button 4 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/button_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_four"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_parents_caregivers"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:fontFamily="@font/lalezar_regular"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <!-- Card for Information Button 5 (Quiz) -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:cardCornerRadius="10dp">

        <Button
            android:id="@+id/quizButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quizButton"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/miok_kiwi_only"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/lalezar_regular"
            android:textStyle="bold"
            android:background="@drawable/light_blue_button"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
